--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,13 @@ python-multipart = "^0.0.5"
 redis = "^3.5.3"
 python-jose = "^3.2.0"
 typer = "^0.3.2"
+lunar_python = "^1.0.29"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
 Faker = "^6.5.0"
 pytest-dotenv = "^0.5.2"
+black = {version = "^20.8b1", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
